# Ai-Speech-to-Text-Medical-Transcription

./: .env  .env.example  LICENSE  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: __init__.py  deps.py  main.py  settings.py
backend/app/api/v1/: routes_auth.py  routes_health.py  routes_jobs.py  routes_reports.py  routes_transcribe.py  routes_transcriptions.py  routes_users.py
backend/app/domain/: models.py  repositories.py  schemas.py
backend/app/infra/: auth.py  broker.py  db.py  logging.py  storage.py  telemetry.py  two_factor.py
backend/app/services/: totp.py
backend/app/services/asr/: enhancement.py  wav2vec_service.py  whisper_service.py
backend/app/services/nlp/: ner_biobert.py  postprocess_llm.py
backend/app/services/reports/: builder.py
backend/app/utils/: audio.py
backend/app/websocket/: manager.py
backend/app/workers/: tasks.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_create_core_tables.py  0002_add_user_profile_fields.py  0003_add_totp_fields.py  0003_add_two_factor_fields.py  0004_add_patients_and_transcriptions.py  0005_add_user_specialty.py  0006_update_jobs_with_transcription_links.py
backend/prometheus_client/: __init__.py
backend/pydantic_settings/: __init__.py
backend/tests/: conftest.py  test_auth.py  test_jobs.py  test_reports.py  test_transcriptions.py  test_whisper_service.py
frontend/: Dockerfile  README.md  package-lock.json  package.json  vite.config.js
(+25 files in other folders)
